# fin-stream

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  clippy.toml  deny.toml  rustfmt.toml
.github/workflows/: ci.yml  coverage.yml  prek.yml  release.yml  security.yml
benches/: tick_hot_path.rs
docs/: design-decisions.md  requirements.md  system-contracts.md  technical-specs.md
docs/planning/: PLAN.md
docs/planning/prek/: PRECOMMIT_RESEARCH_SUMMARY.md  README_PRECOMMIT_RESEARCH.md  RUST_PRECOMMIT_BEST_PRACTICES.md  RUST_PRECOMMIT_EXAMPLES.md
proto/: tick_stream.proto
src/: aggregator.rs  correlation.rs  error.rs  fix.rs  lib.rs  mev.rs  portfolio_feed.rs  protocol.rs  regime.rs  synthetic.rs  toxicity.rs
src/agg/: mod.rs
src/aggregator/: bars.rs
src/alert/: mod.rs
src/alpha_engine/: mod.rs
src/anomaly/: mod.rs
src/arbitrage/: mod.rs  triangular.rs
src/backtest/: mod.rs
src/book/: mod.rs
src/candle/: mod.rs
src/circuit/: mod.rs
src/circuit_breaker/: mod.rs
src/classifier/: mod.rs
src/compression/: mod.rs
src/cross_asset/: mod.rs
src/data_pipeline/: mod.rs
src/depth/: mod.rs
src/event_detector/: mod.rs
src/execution/: mod.rs  slippage_model.rs
src/funding/: mod.rs
src/grpc/: mod.rs
src/health/: mod.rs
src/hft/: mod.rs
src/latency/: mod.rs
src/liquidity/: depth.rs  mod.rs
src/liquidity_monitor/: mod.rs
src/lob_sim/: mod.rs
src/lorentz/: mod.rs
src/market_hours/: mod.rs
src/market_maker/: mod.rs
src/market_simulator/: mod.rs
src/marketmaker/: mod.rs
src/microstructure/: analytics.rs  mod.rs
src/microstructure_v2/: mod.rs
src/multi_exchange/: mod.rs
src/network/: mod.rs
src/news/: mod.rs
src/noise/: mod.rs
src/norm/: mod.rs
src/ofi/: mod.rs
src/ohlcv/: mod.rs
src/order_book_sim/: mod.rs
src/order_flow/: mod.rs
src/order_router/: mod.rs
src/orderbook/: mod.rs
src/pairs_trader/: mod.rs
src/pattern/: mod.rs
src/performance_attribution/: mod.rs
src/persistence/: mod.rs
src/pipeline/: mod.rs
src/portfolio_optimizer/: mod.rs
src/portfolio_risk/: mod.rs
src/position_manager/: mod.rs
src/position_tracker/: mod.rs
src/predictive_book/: mod.rs
src/quality/: mod.rs
src/regime_detector/: mod.rs
src/replay/: mod.rs
src/ring/: mod.rs
src/risk/: mod.rs
src/risk_engine/: mod.rs
src/session/: mod.rs
src/session_analysis/: mod.rs
src/signal/: mod.rs
src/signal_combiner/: mod.rs
src/signal_processor/: mod.rs
src/snapshot/: mod.rs
src/spread/: mod.rs
src/spread_monitor/: mod.rs
src/statarb/: mod.rs
src/synthetic/: instrument.rs  mod.rs
src/technical/: mod.rs
src/tick/: mod.rs
src/tick_filter/: mod.rs
src/tick_processor/: mod.rs
src/toxicity/: mod.rs
src/trade_analytics/: mod.rs
src/venue_selector/: mod.rs
src/volatility_forecast/: mod.rs
src/vwap_tracker/: mod.rs
src/ws/: mod.rs
tests/: api_coverage_stream.rs  book_stress.rs  extended.rs  integration.rs  ohlcv_accuracy.rs  pipeline_tests.rs  production_readiness.rs  property.rs  ring_tests.rs  targeted.rs  tick_normalization.rs
