[workspace]
members = [
    "crates/core",
    "crates/net",
    "crates/analytics",
    "crates/trading",
    "crates/experimental",
    "crates/simulation",
]
resolver = "2"

[workspace.package]
version = "2.11.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/Mattbusel/fin-stream"
authors = ["Matt Busel <matt@busel.dev>"]

[features]
dhat-heap = ["dhat"]

[workspace.dependencies]
fin-stream-core = { path = "crates/core" }
fin-stream-net = { path = "crates/net" }
fin-stream-analytics = { path = "crates/analytics" }
fin-stream-trading = { path = "crates/trading" }
fin-stream-experimental = { path = "crates/experimental" }
fin-stream-simulation = { path = "crates/simulation" }

# Inherited dependencies
rust_decimal = { version = "1.35", features = ["serde-with-str"] }
rust_decimal_macros = "1.35"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.40", features = ["full"] }
thiserror = "1.0"
async-trait = "0.1"
futures-util = "0.3"
dashmap = "5.5"
uuid = { version = "1.6", features = ["v4", "fast-rng", "serde"] }
tracing = "0.1"
fin-primitives = { path = "../fin-primitives", version = "2.0.0" }
tonic = "0.12"
prost = "0.13"
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
rand = "0.8"
itertools = "0.10"
petgraph = "0.6"
dhat = "0.3"
criterion = { version = "0.5", features = ["async_tokio"] }

[package]
name = "fin-stream"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Real-time market data streaming primitives — high-throughput workspace facade"

[dependencies]
fin-stream-core = { workspace = true }
fin-stream-net = { workspace = true }
fin-stream-analytics = { workspace = true }
fin-stream-trading = { workspace = true }
fin-stream-experimental = { workspace = true }
fin-stream-simulation = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tokio = { workspace = true }
dhat = { workspace = true }
rust_decimal_macros = { workspace = true }

[[bench]]
name = "tick_hot_path"
harness = false
